# CRM_system

./: .env  .env.example  .env.exxample  docker-compose.override.yml  docker-compose.prod.yml  docker-compose.yml  nginx.conf  pyproject.toml
apps/auth/: urls.py
apps/crm/: serializers.py  urls.py  views.py
apps/crm/migrations/: 0002_auto_20250805_1750.py  0003_alter_commentsmodel_created_at_and_more.py
apps/users/: managers.py  serializers.py  urls.py  utils.py  views.py
backend/: Dockerfile
backend/apps/crm/: filter.py  logic.py  models.py  normalizers.py  views.py
backend/apps/users/: managers.py  models.py  permissions.py  serializers.py  urls.py
backend/config/: settings.py  urls.py
backend/config/extra_conf/: jwt_conf.py  logging_conf.py  rest_conf.py
backend/core/: pagination.py  selectors.py
backend/core/enums/: action_token_enum.py  regex_enum.py
backend/core/exceptions/: mappers.py  orders_exceptions.py  users_exceptions.py
backend/core/handlers/: error_handler.py
backend/core/middlewares/: cookies_middleware.py
backend/core/permissions/: is_active_user.py  is_unbanned_user.py
backend/core/services/: jwt_service.py
client/: index.html
client/assets/: LoginPage-Rb-jksTb.js  MainPage-D-mJkpXS.js  index-1AV8ujWC.js
config/: settings.py  urls.py
config/extra_conf/: rest_conf.py
core/: models.py  pagination.py
frontend/: .dockerignore  Dockerfile  Dockerfile_prod  package-lock.json  package.json  vite.config.ts
frontend/src/: main.tsx  proxy.ts
next_frontend/: Dockerfile  Dockerfile_prod  package-lock.json  package.json
(+185 files in other folders)
